--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
+body {
+  background: #3d3d3f;
+}
+
+.calculator {
+  color: #f5e6c5;
   text-align: center;
+  width: 800px;
+  margin: 100px auto;
+  border: 5px solid #fe6e1f;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display {
+  color: #fe6e1f;
+  height: 50px;
+  background: #f5e6c5;
+  font-size: 30px;
+  text-align: right;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  height: 50px;
+  font-size: 1.5em;
 }
